--- a/public/styles.css
+++ b/public/styles.css
@@ -41,7 +41,7 @@ footer p {
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
-  width: 240px;
+  width: 30%;
   margin: 16px;
   float: left;
 }
@@ -49,11 +49,22 @@ footer p {
   font-size: 1.1em;
   margin-bottom: 6px;
 }
-.note p {
+.note input {
   font-size: 1.1em;
   margin-bottom: 10px;
   white-space: pre-wrap;
   word-wrap: break-word;
+  width: fit-content;
+}
+
+.note textarea, .note input {
+  width: 100%;
+  border: none;
+  padding: 4px;
+  outline: none;
+  font-size: 1.2em;
+  font-family: inherit;
+  resize: none;
 }
 
 .note button {
